changed resume file

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 <a name="contact"></a>
                 <h3 class="header red-text text-lighten-4">Contact</h3>
                 <p class="brown-text contInfo">Email: stephanie.manhart@gmail.com</p>
-                <p class="brown-text contInfo">Resume: <a href="assets/images/SManhartResume.doc.pdf">PDF</a></p>
+                <p class="brown-text contInfo">Resume: <a href="assets/images/Copy of SManhartResume.doc.pdf">PDF</a></p>
                 <div>
                     <a href="https://www.linkedin.com/in/stephanie-manhart-4681a464" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
                     <a href="https://github.com/smanhart" target="_blank"><i class="fab fa-github-square fa-3x"></i></a>
